Allow positional selectors to match elements without a parent.

BUG=675670
TEST=fast/selectors/child-indexed-pseudo-classes.html

Review-Url: https://codereview.chromium.org/2588643004
Cr-Commit-Position: refs/heads/master@{#444956}

Former-commit-id: 464e47a82e253d08a7c7236fcf5cb5ec5bf8660b